# openbus-sdk-cpp

./: CHANGES  CMakeLists.txt  FaultToleranceManager.cpp  FaultToleranceManager.h  INSTALL.en  INSTALL.pt  Jamroot  Makefile.win  README  config.mak  configure-mico.cmake.sample  configure-orbix.cmake.sample  configure.cmake.sample  doxygen.cfg  logger.cpp  logger.h  mico.mak  openbus.cpp  openbus.h  orbix.mak  project-config.jam
assistant/: Jamfile  config.mak
bbuild/: Jamroot  README.md
cmake/: FindCore_Idl.cmake  FindMico.cmake  FindOrbix.cmake  FindSCS.cmake  FindScs.cmake  FindScs_Idl.cmake  Findcore_idl.cmake
contrib/: Jamroot  Jamroot-windows  boost-build.jam  build_mico-unix.sh  build_mico-win.bat  build_openssl-linux.sh  build_openssl-unix.sh  build_openssl-win.bat  build_openssl-win64.bat  build_tao-linux.sh  make_pack-msvc.bat  project-config.jam
demo/: CMakeLists.txt  README  README.Win  config.mak  openssl.hpp
demo/delegate/: CMakeLists.txt
demo/delegate/multithread/mico/: Makefile  Makefile.sunos  client.cpp  client.mak  config  democonfig  runclient  server.cpp  server.mak
demo/delegate/singlethread/mico/: Makefile  client.cpp  client.mak  config  democonfig  runclient  server.cpp  server.mak
demo/delegate/singlethread/orbix/: Makefile  client.cpp  client.mak  config  democonfig  runclient  server.cpp  server.mak
demo/hello/: CMakeLists.txt  Jamfile  client  client.mak  config  server.mak
demo/hello/admin/: busadmin.adm
demo/hello/client/: client.cpp
demo/hello/idl/: hello.idl
demo/hello/mico/: Jamroot  Makefile  Makefile.sunos  Makefile.win  MakefileMT.linux  MakefileMT.sunos  MakefileST.linux  MakefileST.sunos  client.cpp  client.mak  config  democonfig  democonfigWin.cmd  project-config.jam  runclient  runclient.bat  runserver  runserver.bat  server.cpp  server.mak
demo/hello/oil/: client.cpp  client.mak  hello.cpp  hello.hpp  hello.pkg  helloStub.cpp  helloStub.h  server.cpp  server.mak
demo/hello/orbix/: Makefile  client.cpp  client.mak  config  makefile.example  runclient  server.cpp  server.mak
demo/hello/orbix63/: client.cpp  client.mak  democonfig  makefile.example  run  runclient  runserver  server.cpp  server.mak
demo/hello/server/: server.cpp
demo/hello/src/: client.cpp  server.cpp
doc/: Doxyfile
extension/: config.mak
idl/: access_control.idl  credential.idl  data_export.idl  legacy_support.idl  offer_registry.idl
include/: FaultToleranceManager.h  connection.h  connection_impl.h  log.h  manager.h  multiplexer.h  openbus.h  openbus.hpp  openbus_decl.h
interop/: Jamfile  config.hpp  run-cpp11.cpp  run.cpp  run.sh  run_cpp11.cpp  script.adm  util.hpp
lua/: IOR.lua
oil/: config.mak  openbus.cpp
openbus-tao-2.0.1/: INSTALL.pt  project-config.jam
specs/: descriptors.desc
src/: ClientInterceptor.cpp  Connection.cpp  ConnectionManager.cpp  Connection_impl.cpp  FaultToleranceManager.cpp  Helper.cpp  LoginCache.cpp  ORBInitializer.cpp  ORBInitializerImpl.cpp  OpenBusContext.cpp  ServerInterceptor.cpp  Ticket_impl.c  connection.cpp  connection_impl.cpp  manager.cpp  multiplexer.cpp  openbus.cpp  openbus_context.cpp  openbus_security_manager_impl.cpp  orb_initializer.cpp  security.cpp  security_client_interceptor.cpp  security_interceptors.cpp  security_server_interceptor.cpp  shared_auth_secret.cpp  ticket.c
stubs/: access_control.cc  access_control.h  core.cc  core.h  credential.cc  credential.h  offer_registry.cc  offer_registry.h  scs.cc  scs.h
test/: CMakeLists.txt
test/idl/: RGSTest.idl
test/mico/: compile  config  config.txt  runtests  runtestsMultiPass  runtestsSinglePass
test/mico/acs/: ACSTestSuite.cpp  config.mak  runtests
test/mico/acs/tests/: 01.cpp  01.mak  02.mak  03.mak  04.mak  05.cpp  05.mak  06.mak  07.mak  08.mak  09.mak  10.cpp  10.mak  11.mak  12.cpp  12.mak  13.mak  14.cpp  14.mak  15.cpp  15.mak  16.mak
test/mico/acs/util/: auxiliar.cpp
test/mico/rgs/: RGSTestSuite.cpp  RGSTestSuite.h  config.mak  runtests
test/mico/rgs/tests/: 01.cpp  02.cpp  02.mak  03.cpp  03.mak  04.cpp  04.mak  05.cpp  05.mak  06.cpp  06.mak
test/mico/singlethread/: config
test/mico/tests/: 01.cpp  02.cpp  02.mak  03.cpp  04.cpp  04.mak  05.cpp  06.mak  08.cpp  09.cpp  09.mak  10.cpp  11.cpp  12.cpp  12.mak  13.cpp  14.cpp  15.cpp  15.mak  16.cpp  16.mak  17.cpp  18.cpp  18.mak  19.cpp  19.mak  20.cpp  20.mak  21.cpp  21.mak  22.cpp  22.mak
test/mico/util/: auxiliar.cpp  auxiliar.h
test/orbix/: compile  config  config.txt  runtests  runtestsMultiPass
test/orbix/acs/: ACSTestSuite.cpp  compile  config.mak
test/orbix/acs/tests/: 01.mak  02.mak  03.mak  04.cpp  04.mak  05.mak  06.cpp  06.mak  09.cpp  09.mak  13.mak  16.mak
test/orbix/rgs/: RGSTestSuite.cpp  RGSTestSuite.h  compile  config.mak
test/orbix/rgs/tests/: 01.mak  02.cpp  02.mak  03.cpp  03.mak  04.cpp  04.mak  05.cpp  05.mak  06.cpp  06.mak
test/orbix/tests/: 01.cpp  01.mak  03.cpp  03.mak  04.cpp  05.mak  06.cpp  07.cpp  07.mak  08.cpp  08.mak  09.cpp  10.mak  11.cpp  11.mak  12.cpp  13.cpp  13.mak  14.cpp  14.mak  15.cpp  16.cpp  17.cpp  17.mak  18.cpp  18.mak  19.cpp  19.mak  20.cpp  20.mak  21.cpp  21.mak  22.cpp  22.mak
test/orbix/util/: auxiliar.cpp  auxiliar.h
test/scripts/: management.sh
tests/: Jamfile  check.hpp  config.hpp  config.mak  configuration.h  connect.cpp  connect_host_port_connect_to_right_host_and_port.mak  connect_host_port_connect_to_wrong_host_and_port.mak  connect_host_port_connect_with_empty_host.mak  connect_orb_connect_getting_orb_with_ORB_init.mak  connect_orb_connect_getting_orb_with_createORB.mak  connection_caller_chain_receive_call_with_default_connection_get_caller_chain.mak  connection_loginByCertificate_entity_id_and_file_private_key_ok.mak  connection_loginByPassword_after_logout.mak  connection_loginByPassword_entity_id_and_password_ok.mak  connection_loginByPassword_login_when_already_logged.mak  connection_loginByPassword_wrong_password.mak  connection_login_login_info_after_login.mak  connection_manager_calls_with_default_connection.mak  connection_manager_get_manager.mak  (+21 more)
(+639 files in other folders)
